big boi can upload podders now, need to do html magic to make player

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,3 +1,20 @@
-{% for site in sites%}
-    <p>{{site.site_content | safe}}</p>
-{% endfor %}
+
+
+{% extends "main/header.html" %}
+  {% block content %}
+  <div class="row">
+      {% for site in sites %}
+      <div class="col s12 m6 l4">
+        <div class="card materialize-red darken-4">
+          <div class="card-content white-text">
+            <span class="card-title">{{site.site_title}}</span>
+            <p>{{site.site_content|safe}}</p>
+          </div>
+        </div>
+      </div>
+      {% endfor %}
+    </div>
+  {% endblock %}
+
+
+
