--- a/main/templates/main/header.html
+++ b/main/templates/main/header.html
@@ -14,8 +14,8 @@
       <a href="#" class="brand-logo">Sharanshangar Muhunthan</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="/">Home</a></li>
-        <li><a href="/podder.html">Podder</a></li>
-        <li><a href="resume.html">Resume</a></li>
+        <li><a href="/podder">Podcast</a></li>
+        <li><a href="/resume">Resume</a></li>
       </ul>
     </div>
   </nav>
