ya boi figured it out, watch jn theres finna be a deezed website and mans are gonna be like jheeze whos that

--- a/main/templates/main/podder.html
+++ b/main/templates/main/podder.html
@@ -24,9 +24,11 @@
           <p>{{pod.podder_description}}</p>
         </div>
         <div class="card-action materialize-red darken-4">
-          <audio controls>
-            <source src={{pod.podder_audio.url}} type="audio/mpeg">
-          </audio>
+          <center>
+            <audio controls='controls'>
+              <source src='{{pod.podder_audio.url}}' type="audio/mpeg">
+            </audio>
+          </center>
         </div>
       </div>
     </div>
