front end so ugly hello kitty said goodbye

--- a/main/templates/main/header.html
+++ b/main/templates/main/header.html
@@ -6,7 +6,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
 
-<body style="background-color: rgb(68, 68, 68);">
+<body style="background-color: rgb(68, 68, 68);" style="text-decoration-color: blanchedalmond;">
             
 
   <nav>
