--- a/main/templates/main/resume.html
+++ b/main/templates/main/resume.html
@@ -1,487 +1,30 @@
-<style>
-	/* Add a black background color to the top navigation */
-.topnav {
-  background-color: #333;
-  overflow: hidden;
-}
 
-/* Style the links inside the navigation bar */
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
+{% extends "main/header.html" %}
+{% block content %}
+<!-- <div class="row">
+	{% for resume in resumes %}
+	<div class="col s12 m6 l4">
+	  <div class="card materialize-red darken-4">
+		<div class="card-content white-text">
+		  <span class="card-title">{{resume.resume_category}}</span>
+		  <p>{{resume.resume_data|safe}}</p>
+		</div>
+	  </div>
+	</div>
+	{% endfor %}
+  </div> -->
 
-/* Change the color of links on hover */
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Add a color to the active/current link */
-.topnav a.active {
-  background-color: rgb(231, 10, 10);
-  color: white;
-}
-</style>
-
-
-
-<div class="topnav">
-	<left>
-		<a href="/">Sharanshangar Muhunthan</a>
-	</left>
-	<right>
-		<a class="active" href="/">Home</a>
-		<a href="/podder">Podder</a>
-		<a href="/resume">Resume</a>
-	</right>
-
+  <div>
+    <div class="uk-child-width-1-2@s uk-grid-match" uk-grid>
+      {% for resume in resumes %}
+      <div>
+        <div class="uk-card uk-card-hover uk-card-body">
+            <h3 class="uk-card-title">{{resume.resume_category}}</h3>
+            <p>{{resume.resume_data|safe}}</p>
+        </div>
+    </div>
+      {% endfor %}
   </div>
+{% endblock %}
 
 
-<!DOCTYPE html>
-<html>
-<head>
-<title>resume.md</title>
-<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-
-<style>
-/* https://github.com/microsoft/vscode/blob/master/extensions/markdown-language-features/media/markdown.css */
-/*---------------------------------------------------------------------------------------------
- *  Copyright (c) Microsoft Corporation. All rights reserved.
- *  Licensed under the MIT License. See License.txt in the project root for license information.
- *--------------------------------------------------------------------------------------------*/
-
-body {
-	font-family: var(--vscode-markdown-font-family, -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI", "Ubuntu", "Droid Sans", sans-serif);
-	font-size: var(--vscode-markdown-font-size, 14px);
-	padding: 0 26px;
-	line-height: var(--vscode-markdown-line-height, 22px);
-	word-wrap: break-word;
-}
-
-#code-csp-warning {
-	position: fixed;
-	top: 0;
-	right: 0;
-	color: rgb(8, 8, 8);
-	margin: 16px;
-	text-align: center;
-	font-size: 12px;
-	font-family: sans-serif;
-	background-color:#444444;
-	cursor: pointer;
-	padding: 6px;
-	box-shadow: 1px 1px 1px rgba(0,0,0,.25);
-}
-
-#code-csp-warning:hover {
-	text-decoration: none;
-	background-color:#000203;
-	box-shadow: 2px 2px 2px rgba(0,0,0,.25);
-}
-
-body.scrollBeyondLastLine {
-	margin-bottom: calc(100vh - 22px);
-}
-
-body.showEditorSelection .code-line {
-	position: relative;
-}
-
-body.showEditorSelection .code-active-line:before,
-body.showEditorSelection .code-line:hover:before {
-	content: "";
-	display: block;
-	position: absolute;
-	top: 0;
-	left: -12px;
-	height: 100%;
-}
-
-body.showEditorSelection li.code-active-line:before,
-body.showEditorSelection li.code-line:hover:before {
-	left: -30px;
-}
-
-.vscode-light.showEditorSelection .code-active-line:before {
-	border-left: 3px solid rgba(0, 0, 0, 0.15);
-}
-
-.vscode-light.showEditorSelection .code-line:hover:before {
-	border-left: 3px solid rgba(0, 0, 0, 0.40);
-}
-
-.vscode-light.showEditorSelection .code-line .code-line:hover:before {
-	border-left: none;
-}
-
-.vscode-dark.showEditorSelection .code-active-line:before {
-	border-left: 3px solid rgba(255, 255, 255, 0.4);
-}
-
-.vscode-dark.showEditorSelection .code-line:hover:before {
-	border-left: 3px solid rgba(255, 255, 255, 0.60);
-}
-
-.vscode-dark.showEditorSelection .code-line .code-line:hover:before {
-	border-left: none;
-}
-
-.vscode-high-contrast.showEditorSelection .code-active-line:before {
-	border-left: 3px solid rgba(255, 160, 0, 0.7);
-}
-
-.vscode-high-contrast.showEditorSelection .code-line:hover:before {
-	border-left: 3px solid rgba(255, 160, 0, 1);
-}
-
-.vscode-high-contrast.showEditorSelection .code-line .code-line:hover:before {
-	border-left: none;
-}
-
-img {
-	max-width: 100%;
-	max-height: 100%;
-}
-
-a {
-	text-decoration: none;
-}
-
-a:hover {
-	text-decoration: underline;
-}
-
-a:focus,
-input:focus,
-select:focus,
-textarea:focus {
-	outline: 1px solid -webkit-focus-ring-color;
-	outline-offset: -1px;
-}
-
-hr {
-	border: 0;
-	height: 2px;
-	border-bottom: 2px solid;
-}
-
-h1 {
-	padding-bottom: 0.3em;
-	line-height: 1.2;
-	border-bottom-width: 1px;
-	border-bottom-style: solid;
-}
-
-h1, h2, h3 {
-	font-weight: normal;
-}
-
-table {
-	border-collapse: collapse;
-}
-
-table > thead > tr > th {
-	text-align: left;
-	border-bottom: 1px solid;
-}
-
-table > thead > tr > th,
-table > thead > tr > td,
-table > tbody > tr > th,
-table > tbody > tr > td {
-	padding: 5px 10px;
-}
-
-table > tbody > tr + tr > td {
-	border-top: 1px solid;
-}
-
-blockquote {
-	margin: 0 7px 0 5px;
-	padding: 0 16px 0 10px;
-	border-left-width: 5px;
-	border-left-style: solid;
-}
-
-code {
-	font-family: Menlo, Monaco, Consolas, "Droid Sans Mono", "Courier New", monospace, "Droid Sans Fallback";
-	font-size: 1em;
-	line-height: 1.357em;
-}
-
-body.wordWrap pre {
-	white-space: pre-wrap;
-}
-
-pre:not(.hljs),
-pre.hljs code > div {
-	padding: 16px;
-	border-radius: 3px;
-	overflow: auto;
-}
-
-pre code {
-	color: var(--vscode-editor-foreground);
-	tab-size: 4;
-}
-
-/** Theming */
-
-.vscode-light pre {
-	background-color: rgba(220, 220, 220, 0.4);
-}
-
-.vscode-dark pre {
-	background-color: rgba(10, 10, 10, 0.4);
-}
-
-.vscode-high-contrast pre {
-	background-color: rgb(0, 0, 0);
-}
-
-.vscode-high-contrast h1 {
-	border-color: rgb(0, 0, 0);
-}
-
-.vscode-light table > thead > tr > th {
-	border-color: rgba(0, 0, 0, 0.69);
-}
-
-.vscode-dark table > thead > tr > th {
-	border-color: rgba(255, 255, 255, 0.69);
-}
-
-.vscode-light h1,
-.vscode-light hr,
-.vscode-light table > tbody > tr + tr > td {
-	border-color: rgba(0, 0, 0, 0.18);
-}
-
-.vscode-dark h1,
-.vscode-dark hr,
-.vscode-dark table > tbody > tr + tr > td {
-	border-color: rgba(255, 255, 255, 0.18);
-}
-
-</style>
-
-<style>
-/* Tomorrow Theme */
-/* http://jmblog.github.com/color-themes-for-google-code-highlightjs */
-/* Original theme - https://github.com/chriskempson/tomorrow-theme */
-
-/* Tomorrow Comment */
-.hljs-comment,
-.hljs-quote {
-	color: #8e908c;
-}
-
-/* Tomorrow Red */
-.hljs-variable,
-.hljs-template-variable,
-.hljs-tag,
-.hljs-name,
-.hljs-selector-id,
-.hljs-selector-class,
-.hljs-regexp,
-.hljs-deletion {
-	color: #c82829;
-}
-
-/* Tomorrow Orange */
-.hljs-number,
-.hljs-built_in,
-.hljs-builtin-name,
-.hljs-literal,
-.hljs-type,
-.hljs-params,
-.hljs-meta,
-.hljs-link {
-	color: #f5871f;
-}
-
-/* Tomorrow Yellow */
-.hljs-attribute {
-	color: #eab700;
-}
-
-/* Tomorrow Green */
-.hljs-string,
-.hljs-symbol,
-.hljs-bullet,
-.hljs-addition {
-	color: #718c00;
-}
-
-/* Tomorrow Blue */
-.hljs-title,
-.hljs-section {
-	color: #4271ae;
-}
-
-/* Tomorrow Purple */
-.hljs-keyword,
-.hljs-selector-tag {
-	color: #8959a8;
-}
-
-.hljs {
-	display: block;
-	overflow-x: auto;
-	color: #4d4d4c;
-	padding: 0.5em;
-}
-
-.hljs-emphasis {
-	font-style: italic;
-}
-
-.hljs-strong {
-	font-weight: bold;
-}
-</style>
-
-<style>
-/*
- * Markdown PDF CSS
- */
-
- body {
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI", "Ubuntu", "Droid Sans", sans-serif, "Meiryo";
-	padding: 0 12px;
-}
-
-pre {
-	background-color: #050000;
-	border: 1px solid #cccccc;
-	border-radius: 3px;
-	overflow-x: auto;
-	white-space: pre-wrap;
-	overflow-wrap: break-word;
-}
-
-pre:not(.hljs) {
-	padding: 23px;
-	line-height: 19px;
-}
-
-blockquote {
-	background: rgba(127, 127, 127, 0.1);
-	border-color: rgba(0, 122, 204, 0.5);
-}
-
-.emoji {
-	height: 1.4em;
-}
-
-code {
-	font-size: 14px;
-	line-height: 19px;
-}
-
-/* for inline code */
-:not(pre):not(.hljs) > code {
-	color: #C9AE75; /* Change the old color so it seems less like an error */
-	font-size: inherit;
-}
-
-/* Page Break : use <div class="page"/> to insert page break
--------------------------------------------------------- */
-.page {
-	page-break-after: always;
-}
-
-</style>
-
-<script src="https://unpkg.com/mermaid/dist/mermaid.min.js"></script>
-</head>
-<body style="background-color: #444444;" text="white">
-  <script>
-    mermaid.initialize({
-      startOnLoad: true,
-      theme: document.body.classList.contains('vscode-dark') || document.body.classList.contains('vscode-high-contrast')
-          ? 'dark'
-          : 'default'
-    });
-  </script>
-<h1 id="personal-information">Personal Information</h1>
-<ul>
-<li>GitHub: <a href="https://github.com/shangar21">github.com/shangar21 </a></li>
-<li>Devpost: <a href=https://devpost.com/shangar21>devpost.com/shangar21</a></li>
-<li>E-Mail: shangar.muhunthan@mail.utoronto.ca</li>
-<li>Phone Number: 437-288-6271</li>
-</ul>
-<h1 id="education">Education</h1>
-<p>University of Toronto (2019 - 2023) Scarborough Hons. BSc. Statistics and Mathematics</p>
-<ul>
-<li>Statistics: Machine learning and Data Mining Specialist</li>
-</ul>
-<h1 id="project-experience">Project Experience</h1>
-<p>Hack the Valley 4</p>
-<p><a text="blue" href="https://devpost.com/software/harvest-tjzg0c">Harvest</a>, Winner of the BlockStack challenge</p>
-<ul>
-<li>Worked on the back end API calls Hosted client data on decentralized Gaia servers using BlockStack API</li>
-<li>Learned how to use BlockStack api through documentation and trial and error</li>
-<li>Used BlockStack API to handle transactions of farmcoin which facilitated trade amongst farmers and customers</li>
-<li>Helped debugging and troubleshooting by testing the application in various scenarios such as seeing if food can be purchased with a negative coin value, which was later fixed to only accept coin values of 0 or higher</li>
-</ul>
-<p>RU Hacks</p>
-<p><a text="blue" href="https://devpost.com/software/ruhacks_2020">Whats In Your Fridge?</a></p>
-<ul>
-<li>Worked on the back end API calls</li>
-<li>Used Google cloud vision API to get details on pictures of food</li>
-<li>Used spoonacular API to get recipes after google clouds result</li>
-<li>Helped debug and troubleshoot by testing with various scenarious such as taking pictures of items that were not food and seeing what happened</li>
-</ul>
-<h1 id="personal-projects">Personal Projects</h1>
-<p>Machine Learning and Data Mining</p>
-<ul>
-<li>Learning various mathematical and statistical models for machine learning concepts such as regression, clustering, and neural networks</li>
-<li>Learned numpy, matplotlib, pytorch, multivariable calculus and linear algebra through the process of learning machine learning</li>
-<li>Used various resources such as YouTube and Coursera and other forums to learn how to apply python libraries to mathematical models and create programs that can perform Machine learning concepts</li>
-</ul>
-<p>Creating and Hosting a Personal Website</p>
-<ul>
-<li>Learning how to use Django and React to host and present my own personal website to show other projects as well as talk about myself</li>
-<li>Learned beginner level Django, React, HTML and CSS through the process of learning the ins and outs of hosting websites</li>
-</ul>
-<h1 id="work-experience">Work Experience</h1>
-<p>Century 21 Camdec Real Estate
-<strong>Front Office Assistant</strong>
-<strong>Toronto, ON</strong>
-<em>May 2018 - Present</em></p>
-<ul>
-<li>Set up WD MyCloud file host to allow access to files from any PC in the office</li>
-<li>Filled numerous forms that required attention to detail to complete transactions of house purchases</li>
-<li>Handled numerous lead's queries and suggested agents based on personality and type of house in an organized manner</li>
-<li>Created numerous creative flyers to advertise various events such as New Year's Eve Galas and Spring dances</li>
-<li>Taught new employees how to navigate file system and how to fill out forms for freehold, condo and townhouse transactions</li>
-</ul>
-<p>Best Buy Canada
-<strong>Home Solutions Sales Advisor</strong>
-<strong>Markham, ON</strong>
-<em>Sept 2019 - Jan 2020</em></p>
-<ul>
-<li>Maintained an organized and clean environment to help customers navigate and enjoy TV's more</li>
-<li>Spoke to and sold to multiple customers at the same time whilst remembering what product and type they are looking for</li>
-<li>Discussed bugetary and sales goals with managers in a clear and consise manner</li>
-<li>Handled conflicts calmly and with good discretion Sold just under $150,000 worth of TV, homeaudio, computer and other products</li>
-<li>Worked with team members to come up with creative and new ways to present and sell TV's</li>
-<li>Won numerous challenges to sell warranties and installation services</li>
-</ul>
-<h1 id="personal-interests">Personal Interests</h1>
-<ul>
-<li>Basketball, Soccer, Badminton, Volleyball</li>
-<li>Rap, Jazz, Drumstep and RnB music</li>
-<li>Podcasts such as Flagrant 2, Joe Rogan Experience, Random Order, Brilliant Idiots and Medium Rare Podcast</li>
-<li>Dog Training (I have a German Shepherd/Rotti mix and a Dutch Shepherd comming soon)</li>
-</ul>
-
-</body>
-</html>
