--- a/main/templates/main/podder.html
+++ b/main/templates/main/podder.html
@@ -3,18 +3,18 @@
 {% extends "main/header.html" %}
 {% block content %}
 
-<nav>
+<!-- <nav>
   <div class="nav-wrapper grey darken-4">
     <a href="#" class="brand-logo center">Cosmic Brownie Podcast</a>
     <ul id="nav-mobile" class="left hide-on-med-and-down">
  
     </ul>
   </div>
-</nav>
+</nav> -->
 
 
 
-<div class="row">
+<!-- <div class="row">
   <div class="row">
     {% for pod in podders %}
     <div class="col s12 m6">
@@ -33,8 +33,27 @@
       </div>
     </div>
     {% endfor %}
+  </div> -->
+
+  <div>
+    <div class="uk-child-width-1-2@s uk-grid-match" uk-grid>
+      {% for pod in podders %}
+      <div>
+        <div class="uk-card uk-card-hover uk-card-body">
+            <h3 class="uk-card-title">{{pod.podder_title}}</h3>
+            <p>{{pod.podder_description|safe}}</p>
+        </div>
+        <div class="uk-card uk-card-hover uk-card-body">
+          <center>
+            <audio controls='controls'>
+              <source src='{{pod.podder_audio.url}}' type="audio/mpeg">
+            </audio>
+          </center>
+
+      </div>
+    </div>
+      {% endfor %}
   </div>
-        
 {% endblock %}
 
 
