--- a/main/templates/main/header.html
+++ b/main/templates/main/header.html
@@ -9,16 +9,20 @@
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.5.4/dist/js/uikit-icons.min.js"></script>
 
 <body>
-  <nav class="uk-navbar-container uk-dark" uk-navbar>
-    <div class="uk-navbar-left">
-      <a class="uk-navbar-item uk-logo" href="/">Shangar Muhunthan</a>
-        <ul class="uk-navbar-nav">
-            <li class="uk-active"><a href="/">Home</a></li>
-            <li class="uk-active"><a href="/podder">Podcast</a></li>
-            <li class="uk-active"><a href="/resume">Resume</a></li>
-        </ul>
-    </div>
-</nav>
+  <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
+    <nav class="uk-navbar-container uk-dark" uk-navbar>
+      <div class="uk-navbar-left">
+        <a class="uk-navbar-item uk-logo" href="/">Shangar Muhunthan</a>
+          <ul class="uk-navbar-nav">
+              <li class="uk-active"><a href="/">Home</a></li>
+              <li class="uk-active"><a href="/podder">Podcast</a></li>
+              <li class="uk-active"><a href="/blog_list">Blog</a></li>
+              <li class="uk-active"><a href="/resume">Resume</a></li>
+          </ul>
+      </div>
+    </nav>
+  </div>
+  
 
   {% block content %}
   {% endblock %}
