--- a/main/templates/main/blog_list.html
+++ b/main/templates/main/blog_list.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div>
 <div class="uk-margin uk-child-width-1-2@s uk-grid-match" uk-grid>
-   {% for post in object_list %}
+   {% for post in object_list reversed %}
    <div>
       <div class="uk-card uk-card-hover uk-card-body">
          <h3 class="uk-card-title">{{post.blog_title}}</h3>
