--- a/main/templates/main/header.html
+++ b/main/templates/main/header.html
@@ -17,6 +17,7 @@
               <li class="uk-active"><a href="/">Home</a></li>             
               <li class="uk-active"><a href="/blog_list">Blog</a></li>
               <li class="uk-active"><a href="/resume">Resume</a></li>
+	      <li class="uk-active"><a href="/media/resume/cv_14.pdf" download>Download Resume</a></li>
           </ul>
       </div>
     </nav>
