--- a/main/templates/main/header.html
+++ b/main/templates/main/header.html
@@ -16,6 +16,7 @@
           <ul class="uk-navbar-nav">
               <li class="uk-active"><a href="/">Home</a></li>             
               <li class="uk-active"><a href="/blog_list">Blog</a></li>
+              <li class="uk-active"><a href="/podcast_list">Podcast</a></li>
               <li class="uk-active"><a href="/resume">Resume</a></li>
 	      <li class="uk-active"><a href="/media/resume/cv_14.pdf" download>Download Resume</a></li>
           </ul>
