--- a/main/templates/main/blog_list.html
+++ b/main/templates/main/blog_list.html
@@ -1,14 +1,14 @@
 {% extends "main/header.html" %}
 {% block content %}
-<div>
-<div class="uk-margin uk-child-width-1-2@s uk-grid-match" uk-grid>
+<div class="uk-background-secondary">
+<div class="uk-child-width-1-2@s uk-grid-match uk-grid">
    {% for post in object_list reversed %}
    <div>
-      <div class="uk-card uk-card-hover uk-card-body">
+      <div class="uk-card-secondary uk-card-hover uk-card-body">
          <h3 class="uk-card-title">{{post.blog_title}}</h3>
          <p>{{post.blog_description|safe}}</p>
+         <a class="uk-button uk-button-default uk-width-1-1" href="/blog_post/{{ post.pk }}">Full Article</a>
       </div>
-      <a class="uk-button uk-button-default" href="/blog_post/{{ post.pk }}">Full Article</a>
    </div>
    {% endfor %}
 </div>
