--- a/main/templates/main/blog_post.html
+++ b/main/templates/main/blog_post.html
@@ -27,7 +27,7 @@ MathJax.Hub.Queue(function() {
 
     </h1>
     <p class="uk-article-meta"> 
-        <div class="uk-margin uk-card uk-card-default uk-card-body">
+        <div class="uk-margin uk-card-secondary uk-card-default uk-card-body">
             {{ blog.blog_post|safe }}
         </div>
     </p>
