--- a/main/templates/main/header.html
+++ b/main/templates/main/header.html
@@ -8,15 +8,15 @@
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.5.4/dist/js/uikit.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.5.4/dist/js/uikit-icons.min.js"></script>
 
-<body>
+<body class="uk-background-secondary uk-light">
   <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
-    <nav class="uk-navbar-container uk-dark" uk-navbar>
-      <div class="uk-navbar-left">
+    <nav class="uk-navbar-container uk-dark">
+      <div class="uk-navbar uk-background-secondary">
         <a class="uk-navbar-item uk-logo" href="/">Shangar Muhunthan</a>
           <ul class="uk-navbar-nav">
               <li class="uk-active"><a href="/">Home</a></li>             
               <li class="uk-active"><a href="/blog_list">Blog</a></li>
-              <li class="uk-active"><a href="/podcast_list">Podcast</a></li>
+              <li class="uk-active"><a href="/podder">Podcast</a></li>
               <li class="uk-active"><a href="/resume">Resume</a></li>
 	      <li class="uk-active"><a href="/media/resume/cv_14.pdf" download>Download Resume</a></li>
           </ul>
