--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -6,7 +6,7 @@
     <div class="uk-child-width-1-2@s uk-grid-match" uk-grid>
       {% for site in sites %}
       <div>
-        <div class="uk-card uk-card-hover uk-card-body">
+        <div class="uk-card-secondary uk-card-hover uk-card-body">
             <h3 class="uk-card-title">{{site.site_title}}</h3>
             <p>{{site.site_content|safe}}</p>
         </div>
