--- a/main/templates/main/resume.html
+++ b/main/templates/main/resume.html
@@ -5,7 +5,7 @@
     <div class="uk-child-width-1-2@s uk-grid-match" uk-grid>
       {% for resume in resumes %}
       <div>
-        <div class="uk-card uk-card-hover uk-card-body">
+        <div class="uk-card-secondary uk-card-hover uk-card-body">
             <h3 class="uk-card-title">{{resume.resume_category}}</h3>
             <p>{{resume.resume_data|safe}}</p>
         </div>
