--- a/main/templates/main/podder.html
+++ b/main/templates/main/podder.html
@@ -2,48 +2,15 @@
 
 {% extends "main/header.html" %}
 {% block content %}
-
-<!-- <nav>
-  <div class="nav-wrapper grey darken-4">
-    <a href="#" class="brand-logo center">Cosmic Brownie Podcast</a>
-    <ul id="nav-mobile" class="left hide-on-med-and-down">
- 
-    </ul>
-  </div>
-</nav> -->
-
-
-
-<!-- <div class="row">
-  <div class="row">
-    {% for pod in podders %}
-    <div class="col s12 m6">
-      <div class="card materialize-red darken-4">
-        <div class="card-content white-text">
-          <span class="card-title">{{pod.podder_title}}</span>
-          <p>{{pod.podder_description}}</p>
-        </div>
-        <div class="card-action materialize-red darken-4">
-          <center>
-            <audio controls='controls'>
-              <source src='{{pod.podder_audio.url}}' type="audio/mpeg">
-            </audio>
-          </center>
-        </div>
-      </div>
-    </div>
-    {% endfor %}
-  </div> -->
-
   <div>
     <div class="uk-child-width-1-2@s uk-grid-match" uk-grid>
       {% for pod in podders %}
       <div>
-        <div class="uk-card uk-card-hover uk-card-body">
+        <div class="uk-card-secondary uk-card-hover uk-card-body">
             <h3 class="uk-card-title">{{pod.podder_title}}</h3>
             <p>{{pod.podder_description|safe}}</p>
         </div>
-        <div class="uk-card uk-card-hover uk-card-body">
+        <div class="uk-card-secondary uk-card-hover uk-card-body">
           <center>
             <audio controls='controls'>
               <source src='{{pod.podder_audio.url}}' type="audio/mpeg">
