--- a/main/templates/main/blog_list.html
+++ b/main/templates/main/blog_list.html
@@ -1,7 +1,7 @@
 {% extends "main/header.html" %}
 {% block content %}
-<div class="uk-background-secondary">
-<div class="uk-child-width-1-2@s uk-grid-match uk-grid">
+<div>
+<div class="uk-child-width-1-2@s uk-grid">
    {% for post in object_list reversed %}
    <div>
       <div class="uk-card-secondary uk-card-hover uk-card-body">
