--- a/main/templates/main/blog_post.html
+++ b/main/templates/main/blog_post.html
@@ -26,7 +26,7 @@ MathJax.Hub.Queue(function() {
         </center>      
 
     </h1>
-    <p class="uk-article-meta"> 
+    <p class="uk-article-meta uk-secondary"> 
         <div class="uk-margin uk-card-secondary uk-card-default uk-card-body">
             {{ blog.blog_post|safe }}
         </div>
